--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,10 +1,35 @@
 <div class="jumbotron text-center">
 	<h1>Contact Here</h1>
 	<p>{{ tagline }}</p>
+</div>
 
-	<ul>
-		<li data-ng-repeat="contact in contacts">
-			<p style="background-color: red;">{{ contact.firstname }}</p>
-		</li>
-	</ul>
+
+<div class="row">
+	<div class="col-md-8">
+		<div class="table-responsive">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>First Name</th>
+						<th>Last Name</th>
+						<th>Email</th>
+						<th>Notes</th>
+						<th>Tel</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr data-ng-repeat="contact in contacts">
+						<td>{{ contact.firstname }}</td>
+						<td>{{ contact.lastname }}</td>
+						<td>{{ contact.email }}</td>
+						<td>{{ contact.notes }}</td>
+						<td>{{ contact.tel }}</td>
+					</tr>
+				</tbody>	
+			</table>
+		</div>
+	</div>
+	<div class="col-md-4">
+		
+	</div>
 </div>
