Added response callback functions Click functionality on homepage

--- a/public/views/browse.html
+++ b/public/views/browse.html
@@ -1,5 +1,9 @@
+<aside>
+	<header></header>
+</aside>
+
 <div class="row">
-	<div class="col-md-8 col-md-offset-4">
+	<div class="col-md-8 col-md-offset-2">
 		<div contacts-table></div>
 	</div>
 </div>
