--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,9 +1,13 @@
+<aside>
+	<header></header>
+</aside>
+
 <div class="home text-center">
 	<h4>Welcome to</h4>
 	<h1>
 		The Dojo
 	</h1>
-	<button class="enter_btn btn btn-enter">
+	<a ng-href="/browse" class="enter_btn btn btn-enter">
 		<span>Enter</span>
-	</button>
+	</a>
 </div>
