--- a/public/views/partials/header.html
+++ b/public/views/partials/header.html
@@ -2,8 +2,8 @@
 	<div class="col-md-12">
 		<div>
 			<h1>
-				Underground <br>
-				<small>Team 13</small>
+				Contacts Database<br>
+				<small>by Adam Sofokleous</small>
 			</h1>
 		</div>
 
