--- a/public/views/search.html
+++ b/public/views/search.html
@@ -1,3 +1,7 @@
+<aside>
+	<header></header>
+</aside>
+
 <div class="row">
 	<div class="col-md-8 col-md-offset-4">
 		<input type="search" id="searchc" class="form-control" placeholder="Start searching...">
