--- a/public/views/add.html
+++ b/public/views/add.html
@@ -1,3 +1,7 @@
+<aside>
+	<header></header>
+</aside>
+
 <div class="row">	
 	<div class="col-md-8 col-md-offset-2">
 		<form name="newContactForm" ng-submit="storeContact(newContactForm.$valid)" novalidate class="form-horizontal">
